RESOLVED FIXED204813
REGRESSION (r252778): ASSERT(!m_networkLoad); in ~SpeculativeLoad()
https://bugs.webkit.org/show_bug.cgi?id=204813
Summary REGRESSION (r252778): ASSERT(!m_networkLoad); in ~SpeculativeLoad()
Chris Dumez
Reported 2019-12-03 13:26:24 PST
ASSERT(!m_networkLoad); in ~SpeculativeLoad(): 4 0x107d0cf9f WebKit::NetworkCache::SpeculativeLoad::~SpeculativeLoad() 5 0x107d0cfe5 WebKit::NetworkCache::SpeculativeLoad::~SpeculativeLoad() 6 0x107d0d00c WebKit::NetworkCache::SpeculativeLoad::~SpeculativeLoad() 7 0x107c8110f std::__1::default_delete<WebKit::NetworkCache::SpeculativeLoad>::operator()(WebKit::NetworkCache::SpeculativeLoad*) const 8 0x107c8108f std::__1::unique_ptr<WebKit::NetworkCache::SpeculativeLoad, std::__1::default_delete<WebKit::NetworkCache::SpeculativeLoad> >::reset(WebKit::NetworkCache::SpeculativeLoad*) 9 0x107c81029 std::__1::unique_ptr<WebKit::NetworkCache::SpeculativeLoad, std::__1::default_delete<WebKit::NetworkCache::SpeculativeLoad> >::~unique_ptr() 10 0x107c47405 std::__1::unique_ptr<WebKit::NetworkCache::SpeculativeLoad, std::__1::default_delete<WebKit::NetworkCache::SpeculativeLoad> >::~unique_ptr() 11 0x107d11093 WebKit::NetworkCache::SpeculativeLoadManager::revalidateSubresource(WebKit::NetworkCache::SubresourceInfo const&, std::__1::unique_ptr<WebKit::NetworkCache::Entry, std::__1::default_delete<WebKit::NetworkCache::Entry> >, WebKit::NetworkCache::GlobalFrameID const&) 12 0x107d46c45 WebKit::NetworkCache::SpeculativeLoadManager::revalidateSubresource(WebKit::NetworkCache::SubresourceInfo const&, std::__1::unique_ptr<WebKit::NetworkCache::Entry, std::__1::default_delete<WebKit::NetworkCache::Entry> >, WebKit::NetworkCache::GlobalFrameID const&)::$_10::operator()() 13 0x107d46ade WTF::Detail::CallableWrapper<WebKit::NetworkCache::SpeculativeLoadManager::revalidateSubresource(WebKit::NetworkCache::SubresourceInfo const&, std::__1::unique_ptr<WebKit::NetworkCache::Entry, std::__1::default_delete<WebKit::NetworkCache::Entry> >, WebKit::NetworkCache::GlobalFrameID const&)::$_10, void>::call() 14 0x1077df4e2 WTF::Function<void ()>::operator()() const 15 0x107d0fa3a WebKit::NetworkCache::SpeculativeLoadManager::PendingFrameLoad::markMainResourceResponseAsReceived() 16 0x107d0f9d2 WebKit::NetworkCache::SpeculativeLoadManager::registerMainResourceLoadResponse(WebKit::NetworkCache::GlobalFrameID const&, WebCore::ResourceRequest const&, WebCore::ResourceResponse const&) 17 0x107a88b4f WebKit::NetworkResourceLoader::didReceiveMainResourceResponse(WebCore::ResourceResponse const&) 18 0x107a8596c WebKit::NetworkResourceLoader::didRetrieveCacheEntry(std::__1::unique_ptr<WebKit::NetworkCache::Entry, std::__1::default_delete<WebKit::NetworkCache::Entry> >) 19 0x107a897fc WebKit::NetworkResourceLoader::didFinishLoading(WebCore::NetworkLoadMetrics const&) 20 0x107a6605e WebKit::NetworkLoad::didCompleteWithError(WebCore::ResourceError const&, WebCore::NetworkLoadMetrics const&) 21 0x107a2be08 WebKit::NetworkDataTaskCocoa::didCompleteWithError(WebCore::ResourceError const&, WebCore::NetworkLoadMetrics const&) 22 0x107a31445 -[WKNetworkSessionDelegate URLSession:task:didCompleteWithError:] 23 0x7fff2fb30235 CFHTTPCookieStorageUnscheduleFromRunLoop 24 0x7fff339391b5 __NSBLOCKOPERATION_IS_CALLING_OUT_TO_A_BLOCK__ 25 0x7fff339390d6 -[NSBlockOperation main] 26 0x7fff33aaa761 __NSOPERATION_IS_INVOKING_MAIN__ 27 0x7fff3390fc73 -[NSOperation start] 28 0x7fff33aaab59 __NSOPERATIONQUEUE_IS_STARTING_AN_OPERATION__ 29 0x7fff33938eb9 __NSOQSchedule_f 30 0x7fff690252b9 _dispatch_block_async_invoke2 31 0x7fff69019658 _dispatch_client_callout
Attachments
Patch (3.04 KB, patch)
2019-12-03 13:32 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-12-03 13:26:42 PST
Chris Dumez
Comment 2 2019-12-03 13:32:20 PST
WebKit Commit Bot
Comment 3 2019-12-03 15:17:52 PST
Comment on attachment 384749 [details] Patch Clearing flags on attachment: 384749 Committed r253065: <https://trac.webkit.org/changeset/253065>
WebKit Commit Bot
Comment 4 2019-12-03 15:17:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.